--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "assets"]
 	path = assets
-	url = https://github.com/FunkinCrew/funkin.assets
+	url = https://github.com/n1d3v/funkin.assets
 [submodule "art"]
 	path = art
-	url = https://github.com/FunkinCrew/funkin.art
+	url = https://github.com/n1d3v/funkin.art
