--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "art"]
 	path = art
 	url = https://github.com/n1d3v/funkin.art
+[submodule "funkin.assets"]
+	path = funkin.assets
+	url = https://github.com/n1d3v/funkin.assets
+[submodule "funkin.art"]
+	path = funkin.art
+	url = https://github.com/n1d3v/funkin.art
